chore: production cert :rocket:

--- a/kubernetes/flux/components/common/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/components/common/cluster-secrets.sops.yaml
@@ -3,8 +3,8 @@ kind: Secret
 metadata:
   name: cluster-secrets
 stringData:
-  SECRET_DOMAIN: ENC[AES256_GCM,data:PNr7fbT1zkOMwIyqcFA=,iv:sbSuwGJnlU75SMM2K7Bwz/P5Rluj7IVNbXm7Ud2kkB0=,tag:Ead1gZoEWgSiEozGsPfdiA==,type:str]
-  SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:kVlNNfPKLZQjWMAA0DF6NEpSOQKdBc+9HrCzhez9ogPOnsW+,iv:4bywGf9NDFqijLof45vzyAcrIlPz0ou/3NqTK0Gmbsc=,tag:uwID+3t4vlgOS8nojqCClQ==,type:str]
+  SECRET_DOMAIN: ENC[AES256_GCM,data:6GZggz7h78heIH62GSg=,iv:h3ywygSVEnW5RygGVJx54nmqpgcWTigzm+MZDR1EbeE=,tag:FLypwc9vdFQngtB+e7+NhA==,type:str]
+  SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:6bwHuLEkgWXCyS8PWm0n8a4EXEqDQSGbBg4ieL4nLC7/UgCQ,iv:bBl2IkJhiHF+9DFWu/DH2BD89ao5cQlNAGtWLxDo6E8=,tag:8U/kwy0skNTVyjcds3EPyQ==,type:str]
 sops:
   kms: []
   gcp_kms: []
@@ -14,14 +14,14 @@ sops:
     - recipient: age1l5pn0rt2p69q09asv9nf2vew4tamcxhqstxrg6wv9z79nglr8p0qtcnxrq
       enc: |
         -----BEGIN AGE ENCRYPTED FILE-----
-        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBhSUszaGRQYTFHcTA1V2Nj
-        TEI2aW5jSE00N3Z3QTg1d2xYSlRsRGhZamdvCldZTkU0WkkydEFDazZiR0p0ZjNN
-        SE9tMVFxTTR2T2kyaW52VzNER3locWMKLS0tIFpIVWVGakdreURZQy9MSittZGY4
-        QXNBYmx5QlVvRTNiRDcrQ1ZIakRNcXMKFeTCpr+RKk3lgwVIbDaKZh5FCyyS/HUd
-        Q2Mazo3SxOdGPud/Y2Q7IZQI01sv6elb0BIGoZE/eVpIpP8Pnn1XYg==
+        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBacUFDdTQ4SmJxMi9uRnFl
+        eTR2Wjh0YU9UNkczK0EyZDA0SFdKM3dyNVRnCmZPbllmN0RzWVZ0cmR3VURHT1Mw
+        bmY0TXUrSHhSUVpFVFpWSTVucE5uN1EKLS0tIEh3dGJReExmdEc4Y0Q5M1VRcHBl
+        ZWw1R3RxQ29mZFRXQ2lPaFk0Rk52aXMKX9ulTlQ+QShnkEXOalM3J0qGuAo5hUhw
+        y42FZOuWd49+r8UK794eQX5xkT7WXQUAjmMLdR+NVoNDuIKo1mRjFA==
         -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2025-02-13T03:09:00Z"
-  mac: ENC[AES256_GCM,data:1039evMH1HxVRxuuPJFP666HQE+4n2Epe0EBBPP7ai8SjiQATykrdCREVYspRYIoFfSy6vCO0F5CR/tIz06uiLRARVnYU0eaRpVtukaSCNMoXvEggSqk/yk+xdJ2h6ulN6V5ezgmYbufzIc/BtjyLfdAgCwR7eJWnea7l33qIXA=,iv:JESULWcq1p5iWnWducF6qF+AaG3/qNQEnUJOgUJthMU=,tag:0sd7wRFC1HM1EkCInPsZCw==,type:str]
+  lastmodified: "2025-02-13T04:02:19Z"
+  mac: ENC[AES256_GCM,data:23Z2JZL5UGb2GJbZ8073UJTBMosKYwtaPqcVbAeJSYB9bFAN73Y4opp1fAJciZiOVxiEYeIxERrYmlCOz5HZhaZD702FIVp8vy1NP2Jj1ytlH+d5Yf6YzobD3s+VvzrrNDtJIwzslAHyvVNw7GOFaFfaYhwInvpSeEqocSGs8+s=,iv:5lMHgH35swwjV/yKUAJmNePQYIX0ZRG4gN2kcZN/ljQ=,tag:MEi5lnwfSGme4K5ai+IjVQ==,type:str]
   pgp: []
   encrypted_regex: ^(data|stringData)$
   mac_only_encrypted: true
