chore: initial commit :rocket:

--- a/kubernetes/flux/components/common/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/components/common/cluster-secrets.sops.yaml
@@ -3,8 +3,8 @@ kind: Secret
 metadata:
   name: cluster-secrets
 stringData:
-  SECRET_DOMAIN: ENC[AES256_GCM,data:6GZggz7h78heIH62GSg=,iv:h3ywygSVEnW5RygGVJx54nmqpgcWTigzm+MZDR1EbeE=,tag:FLypwc9vdFQngtB+e7+NhA==,type:str]
-  SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:6bwHuLEkgWXCyS8PWm0n8a4EXEqDQSGbBg4ieL4nLC7/UgCQ,iv:bBl2IkJhiHF+9DFWu/DH2BD89ao5cQlNAGtWLxDo6E8=,tag:8U/kwy0skNTVyjcds3EPyQ==,type:str]
+  SECRET_DOMAIN: ENC[AES256_GCM,data:Q7uY20KSAEnRmSrYyqw=,iv:9Eau7qmimYhtjzyfbEaXwhJPG0XZbZ+g9mwCD8p1G90=,tag:3+XWQqmuQ8svGcRrQVCs7A==,type:str]
+  SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:S8CRdMaPo62w7+mJXSlW2batjrRm3R+2bI9caB4FnCtxUqe+,iv:xJL4fGKQjxzWGos2GkEa5juq3rYOj4prtoZlM6S4eXA=,tag:vIhN20vXtEMen7ZBfhTL/Q==,type:str]
 sops:
   kms: []
   gcp_kms: []
@@ -14,14 +14,14 @@ sops:
     - recipient: age1l5pn0rt2p69q09asv9nf2vew4tamcxhqstxrg6wv9z79nglr8p0qtcnxrq
       enc: |
         -----BEGIN AGE ENCRYPTED FILE-----
-        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBacUFDdTQ4SmJxMi9uRnFl
-        eTR2Wjh0YU9UNkczK0EyZDA0SFdKM3dyNVRnCmZPbllmN0RzWVZ0cmR3VURHT1Mw
-        bmY0TXUrSHhSUVpFVFpWSTVucE5uN1EKLS0tIEh3dGJReExmdEc4Y0Q5M1VRcHBl
-        ZWw1R3RxQ29mZFRXQ2lPaFk0Rk52aXMKX9ulTlQ+QShnkEXOalM3J0qGuAo5hUhw
-        y42FZOuWd49+r8UK794eQX5xkT7WXQUAjmMLdR+NVoNDuIKo1mRjFA==
+        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBjc2QwbkJta3hHSVQzWDZ3
+        TkFqdDRQZENIcWQ1aDd3Tk1hWWJKOTNkSUFZCkd1bDM0WlBjQjE2cG1OeGxlSGth
+        TmhEUUk4eG1lOU11MzErcHhFRDM4QkkKLS0tIFpSRTJFVGRBQ0U0Rll5SDBOanRi
+        OUNwMDk3V05DaldsNk9DaFBZNFdhSzAKLLrbNYOI7W/+SwnR5dFoMKGgm4e3r9I9
+        WB19v6Q9EfrZUZT3fATRNsAtxgb3+IcOgspJbfxlkmCx+Rf1YmR3mA==
         -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2025-02-13T04:02:19Z"
-  mac: ENC[AES256_GCM,data:23Z2JZL5UGb2GJbZ8073UJTBMosKYwtaPqcVbAeJSYB9bFAN73Y4opp1fAJciZiOVxiEYeIxERrYmlCOz5HZhaZD702FIVp8vy1NP2Jj1ytlH+d5Yf6YzobD3s+VvzrrNDtJIwzslAHyvVNw7GOFaFfaYhwInvpSeEqocSGs8+s=,iv:5lMHgH35swwjV/yKUAJmNePQYIX0ZRG4gN2kcZN/ljQ=,tag:MEi5lnwfSGme4K5ai+IjVQ==,type:str]
+  lastmodified: "2025-02-13T04:11:25Z"
+  mac: ENC[AES256_GCM,data:zw1zlUhekM7Ol2LR9QyPsh5R3i0RuOvoKl9EP2bYeIk7RRxGOVTXiougY2g+T51dWS2kNjbNfZx3TFw9CjoHiMekVVSjkLT/HMcMXTs2E4i+2XzoSWc9D9xpDC+pBlkkvgJDy5mWB2NaQzrYTHFtOGEsfnAYA26ayeTHt0UYH5g=,iv:iYdXTm6v2vTMij8mUtkBHMiAHfdQlwzAoYYHS6yh88c=,tag:c9sGg875dHvh2vbqXPP0sQ==,type:str]
   pgp: []
   encrypted_regex: ^(data|stringData)$
   mac_only_encrypted: true
