chore: back to staging cert :rocket:

--- a/kubernetes/flux/components/common/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/components/common/cluster-secrets.sops.yaml
@@ -3,8 +3,8 @@ kind: Secret
 metadata:
   name: cluster-secrets
 stringData:
-  SECRET_DOMAIN: ENC[AES256_GCM,data:Q7uY20KSAEnRmSrYyqw=,iv:9Eau7qmimYhtjzyfbEaXwhJPG0XZbZ+g9mwCD8p1G90=,tag:3+XWQqmuQ8svGcRrQVCs7A==,type:str]
-  SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:S8CRdMaPo62w7+mJXSlW2batjrRm3R+2bI9caB4FnCtxUqe+,iv:xJL4fGKQjxzWGos2GkEa5juq3rYOj4prtoZlM6S4eXA=,tag:vIhN20vXtEMen7ZBfhTL/Q==,type:str]
+  SECRET_DOMAIN: ENC[AES256_GCM,data:yGYfVB5U6sN2HB8Xh0M=,iv:BuaVcq07rZM6WD/4KHVzH+7U6igFl8tkNe5lqyZEfD8=,tag:P5vmw5G2GV1RGsnRolkERw==,type:str]
+  SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:O1SoL5sIMWrnYg0COXm/oxbmSuu2qupGGhawo6bBBzUhHFnD,iv:d+q/CPCd7STkdXpMGoDB/Hy6air+TxgNHonITvruoF4=,tag:PPPkISZbL+/Iyy+t3jAbyg==,type:str]
 sops:
   kms: []
   gcp_kms: []
@@ -14,14 +14,14 @@ sops:
     - recipient: age1l5pn0rt2p69q09asv9nf2vew4tamcxhqstxrg6wv9z79nglr8p0qtcnxrq
       enc: |
         -----BEGIN AGE ENCRYPTED FILE-----
-        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBjc2QwbkJta3hHSVQzWDZ3
-        TkFqdDRQZENIcWQ1aDd3Tk1hWWJKOTNkSUFZCkd1bDM0WlBjQjE2cG1OeGxlSGth
-        TmhEUUk4eG1lOU11MzErcHhFRDM4QkkKLS0tIFpSRTJFVGRBQ0U0Rll5SDBOanRi
-        OUNwMDk3V05DaldsNk9DaFBZNFdhSzAKLLrbNYOI7W/+SwnR5dFoMKGgm4e3r9I9
-        WB19v6Q9EfrZUZT3fATRNsAtxgb3+IcOgspJbfxlkmCx+Rf1YmR3mA==
+        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAxaTBUMEtFUmZIYjNiZXNq
+        UkR5ZnQ5aFJzdm1PaTMzZHl2RllSQjkrT1hrCjFCR3Nqam92UlpWQWVuT0d3d1BO
+        V0pWMXB4SzBnNXIvcFVtWUxaL01BZ0UKLS0tIGgwZ0taTEloVHR0dXM3QVhPU05J
+        OExSb0NxSXJHcjhnbU9yUGgzVmR0ZzgK3xDoWIXSnQxLIViiTBi4AsaN+hxhcJf1
+        4kdx9rQ60wTS75nnHMRcGdLfsbD9uugo/nPyXFTDAFFfKVKZueJjCA==
         -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2025-02-13T04:11:25Z"
-  mac: ENC[AES256_GCM,data:zw1zlUhekM7Ol2LR9QyPsh5R3i0RuOvoKl9EP2bYeIk7RRxGOVTXiougY2g+T51dWS2kNjbNfZx3TFw9CjoHiMekVVSjkLT/HMcMXTs2E4i+2XzoSWc9D9xpDC+pBlkkvgJDy5mWB2NaQzrYTHFtOGEsfnAYA26ayeTHt0UYH5g=,iv:iYdXTm6v2vTMij8mUtkBHMiAHfdQlwzAoYYHS6yh88c=,tag:c9sGg875dHvh2vbqXPP0sQ==,type:str]
+  lastmodified: "2025-02-13T04:33:45Z"
+  mac: ENC[AES256_GCM,data:5LF2px6N0fN7Z98PGqQprt89veAiIl/i0TjpnskLcxaBXMr64ew9RtyL7ofX17nEtI5Y/3d+M/JE+xvKwC+nn5zoQgvamHyhX3k1lQtkshuC1J5Vz3ngqjbXmeCwIb2bufZA2a8fovhZs0x56zwLuCLDwqaDKYUR6+x5Pj2wK6k=,iv:5+dqGQ47wZ0QyEg7vPnoeHbkIOwSp2xxTRxDf8vlfd8=,tag:zQIY/px2lteQEvWgFe4CdQ==,type:str]
   pgp: []
   encrypted_regex: ^(data|stringData)$
   mac_only_encrypted: true
