--- a/kubernetes/flux/components/common/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/components/common/cluster-secrets.sops.yaml
@@ -3,8 +3,8 @@ kind: Secret
 metadata:
   name: cluster-secrets
 stringData:
-  SECRET_DOMAIN: ENC[AES256_GCM,data:yGYfVB5U6sN2HB8Xh0M=,iv:BuaVcq07rZM6WD/4KHVzH+7U6igFl8tkNe5lqyZEfD8=,tag:P5vmw5G2GV1RGsnRolkERw==,type:str]
-  SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:O1SoL5sIMWrnYg0COXm/oxbmSuu2qupGGhawo6bBBzUhHFnD,iv:d+q/CPCd7STkdXpMGoDB/Hy6air+TxgNHonITvruoF4=,tag:PPPkISZbL+/Iyy+t3jAbyg==,type:str]
+  SECRET_DOMAIN: ENC[AES256_GCM,data:iTUGIvrnyBNwm9fdd34=,iv:q5M8B2TpT/PCh9/Y9k4y2pYM6T+VvHNNfjb5Y9jtr1M=,tag:qfRDJMMwE9cmWxKOevzEtQ==,type:str]
+  SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:h5ydbOI4H00P5NX9l/Qz9mQj/RGPMrBhmt5Gj6ecOA9MgJei,iv:8oteWvs3QXCK3JyUryxa+QZhr7xwInJauDG1ahyu7+Y=,tag:eGGNRt7HtemF6tf75bQtEg==,type:str]
 sops:
   kms: []
   gcp_kms: []
@@ -14,14 +14,14 @@ sops:
     - recipient: age1l5pn0rt2p69q09asv9nf2vew4tamcxhqstxrg6wv9z79nglr8p0qtcnxrq
       enc: |
         -----BEGIN AGE ENCRYPTED FILE-----
-        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAxaTBUMEtFUmZIYjNiZXNq
-        UkR5ZnQ5aFJzdm1PaTMzZHl2RllSQjkrT1hrCjFCR3Nqam92UlpWQWVuT0d3d1BO
-        V0pWMXB4SzBnNXIvcFVtWUxaL01BZ0UKLS0tIGgwZ0taTEloVHR0dXM3QVhPU05J
-        OExSb0NxSXJHcjhnbU9yUGgzVmR0ZzgK3xDoWIXSnQxLIViiTBi4AsaN+hxhcJf1
-        4kdx9rQ60wTS75nnHMRcGdLfsbD9uugo/nPyXFTDAFFfKVKZueJjCA==
+        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBwcjFKSWVuRUwvcmNIMC95
+        dHJMeHJMSG16OFR6dStyWi9EeFZ2WUlEZmd3CnIvVk5CTDJxNDZzdXMwWnY0SVZX
+        Z3duZW5YK3QxTUJZdGVvTk5YN2sxWWMKLS0tIGdXejJxeE1PUmxLNUZUTnBZVVg2
+        eHFtaWdFWnVpR09TZEJtbmlLS1dWa2sKzE85vsACFyPLiHxyYGjf0fGVncw6lQ9W
+        4x8UpJI0HiRtS4xZ0JLzRaSEPrwrMR07uAxXadwNQc/TzsirXQ/tzA==
         -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2025-02-13T04:33:45Z"
-  mac: ENC[AES256_GCM,data:5LF2px6N0fN7Z98PGqQprt89veAiIl/i0TjpnskLcxaBXMr64ew9RtyL7ofX17nEtI5Y/3d+M/JE+xvKwC+nn5zoQgvamHyhX3k1lQtkshuC1J5Vz3ngqjbXmeCwIb2bufZA2a8fovhZs0x56zwLuCLDwqaDKYUR6+x5Pj2wK6k=,iv:5+dqGQ47wZ0QyEg7vPnoeHbkIOwSp2xxTRxDf8vlfd8=,tag:zQIY/px2lteQEvWgFe4CdQ==,type:str]
+  lastmodified: "2025-02-13T15:05:45Z"
+  mac: ENC[AES256_GCM,data:KA78SSg7mEzwfD69PuQQcex27BU9JuEp7y7O8tOrWbB6Oc/md0eTwlC3HZHLtP6MjUhwOlQgquXqrGNFJqv7LnUHJIdjIUH/7v5MKTOiPKKjvQH1A30iKsgTaDPAOod20j3TMYc7lS0hnnmW/8Ge9cxu3UUJqiCxUlFzdOT5pik=,iv:vUEHUZ6xCXdaoxDxEkVONFZLC6ESgU6ZNvEzbz/Cnng=,tag:Gc1u/7Ae2iHwrzvMLRepPQ==,type:str]
   pgp: []
   encrypted_regex: ^(data|stringData)$
   mac_only_encrypted: true
