--- a/kubernetes/apps/default/trilium/app/kustomization.yaml
+++ b/kubernetes/apps/default/trilium/app/kustomization.yaml
@@ -2,11 +2,10 @@
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: default
-components:
-  - ../../flux/components/common
 resources:
-  - ./echo-server/ks.yaml
-  - ./vaultwarden/ks.yaml
-  - ./trilium/ks.yaml
+#  - ./externalsecret.yaml
+  - ./pvc.yaml
+  - ./helmrelease.yaml
+#  - ./trilium-secret.sops.yaml
+
 
