--- a/kubernetes/apps/rook-ceph/kustomization.yaml
+++ b/kubernetes/apps/rook-ceph/kustomization.yaml
@@ -7,6 +7,7 @@ resources:
   - ./namespace.yaml
   # Flux-Kustomizations
   - ./rook-ceph/ks.yaml
+  - ./ceph-toolbox/ks.yaml
 transformers:
   - |-
     apiVersion: builtin
