--- a/kubernetes/apps/dashboards/kubernetes-dashboard/app/helmrelease.yaml
+++ b/kubernetes/apps/dashboards/kubernetes-dashboard/app/helmrelease.yaml
@@ -8,32 +8,42 @@ spec:
   chart:
     spec:
       chart: kubernetes-dashboard
-      version: 7.10.4
+      version: 7.9.0
       sourceRef:
         kind: HelmRepository
         name: kubernetes-dashboard
         namespace: flux-system
   install:
+    createNamespace: true
     remediation:
       retries: 3
   upgrade:
     cleanupOnFail: true
     remediation:
       retries: 3
-  uninstall:
-    keepHistory: false
   values:
-    extraArgs:
-      - --enable-insecure-login
-      - --enable-skip-login
-      - --disable-settings-authorizer
-    ingress:
-      enabled: true
-      className: internal
-      hosts:
-        - &host "kubernetes.${SECRET_DOMAIN}"
-      tls:
-        - hosts:
-            - *host
     metricsScraper:
       enabled: true
+    app:
+      env:
+        TZ: "${TIMEZONE}"
+      extraArgs:
+        - --enable-skip-login
+        - --disable-settings-authorizer
+        - --enable-insecure-login
+        - --token-ttl=43200 # seconds time to expire
+      ingress:
+        enabled: true
+        ingressClassName: internal
+#        annotations:
+#          gethomepage.dev/enabled: "true"
+#          gethomepage.dev/group: Services
+#          gethomepage.dev/name: Kubernetes Dashboard
+#          gethomepage.dev/icon: mdi-kubernetes
+#          nginx.ingress.kubernetes.io/auth-method: GET
+#          nginx.ingress.kubernetes.io/auth-url: "http://authelia.auth.svc.cluster.local/api/verify"
+#          nginx.ingress.kubernetes.io/auth-signin: "https://auth.${SECRET_EXTERNAL_DOMAIN}/?rm=$request_method"
+#          nginx.ingress.kubernetes.io/auth-response-headers: Remote-User,Remote-Name,Remote-Groups,Remote-Email
+#          nginx.ingress.kubernetes.io/auth-snippet: proxy_set_header X-Forwarded-Method $request_method;
+        hosts:
+          - "kubernetes.${SECRET_INTERNAL_DOMAIN}"
