--- a/kubernetes/apps/dashboards/kubernetes-dashboard/app/helmrelease.yaml
+++ b/kubernetes/apps/dashboards/kubernetes-dashboard/app/helmrelease.yaml
@@ -8,13 +8,12 @@ spec:
   chart:
     spec:
       chart: kubernetes-dashboard
-      version: 7.9.0
+      version: 7.10.4
       sourceRef:
         kind: HelmRepository
         name: kubernetes-dashboard
         namespace: flux-system
   install:
-    createNamespace: true
     remediation:
       retries: 3
   upgrade:
@@ -34,7 +33,7 @@ spec:
         - --token-ttl=43200 # seconds time to expire
       ingress:
         enabled: true
-        ingressClassName: internal
+        className: internal
 #        annotations:
 #          gethomepage.dev/enabled: "true"
 #          gethomepage.dev/group: Services
@@ -46,4 +45,4 @@ spec:
 #          nginx.ingress.kubernetes.io/auth-response-headers: Remote-User,Remote-Name,Remote-Groups,Remote-Email
 #          nginx.ingress.kubernetes.io/auth-snippet: proxy_set_header X-Forwarded-Method $request_method;
         hosts:
-          - "kubernetes.${SECRET_INTERNAL_DOMAIN}"
+          - "kubernetes.${SECRET_DOMAIN}"
