--- a/kubernetes/apps/dashboards/kubernetes-dashboard/app/helmrelease.yaml
+++ b/kubernetes/apps/dashboards/kubernetes-dashboard/app/helmrelease.yaml
@@ -31,18 +31,27 @@ spec:
         - --disable-settings-authorizer
         - --enable-insecure-login
         - --token-ttl=86400 # seconds time to expire
-      ingress:
+
+    service:
+      *app :
+        controller: *app
+        ports:
+          http:
+            port: &port 8080
+
+    ingress:
+      app:
         enabled: true
-        className: internal
-#        annotations:
-#          gethomepage.dev/enabled: "true"
-#          gethomepage.dev/group: Services
-#          gethomepage.dev/name: Kubernetes Dashboard
-#          gethomepage.dev/icon: mdi-kubernetes
-#          nginx.ingress.kubernetes.io/auth-method: GET
-#          nginx.ingress.kubernetes.io/auth-url: "http://authelia.auth.svc.cluster.local/api/verify"
-#          nginx.ingress.kubernetes.io/auth-signin: "https://auth.${SECRET_EXTERNAL_DOMAIN}/?rm=$request_method"
-#          nginx.ingress.kubernetes.io/auth-response-headers: Remote-User,Remote-Name,Remote-Groups,Remote-Email
-#          nginx.ingress.kubernetes.io/auth-snippet: proxy_set_header X-Forwarded-Method $request_method;
+        className: external
+        annotations:
+          external-dns.alpha.kubernetes.io/target: external.${SECRET_DOMAIN}
         hosts:
-          - "kubernetes.${SECRET_DOMAIN}"
+          - host: &host "{{ .Release.Name }}.${SECRET_DOMAIN}"
+            paths:
+              - path: /
+                service:
+                  identifier: *app
+                  port: *port
+        tls:
+          - hosts:
+              - *host
