--- a/kubernetes/apps/dashboards/kubernetes-dashboard/app/helmrelease.yaml
+++ b/kubernetes/apps/dashboards/kubernetes-dashboard/app/helmrelease.yaml
@@ -2,7 +2,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: kubernetes-dashboard
+  name: &app kubernetes-dashboard
 spec:
   interval: 30m
   chart:
@@ -13,12 +13,16 @@ spec:
         kind: HelmRepository
         name: kubernetes-dashboard
         namespace: flux-system
+  releaseName: kubernetes-dashboard
+  targetNamespace: dashboards
+  maxHistory: 2
   install:
     remediation:
       retries: 3
   upgrade:
     cleanupOnFail: true
     remediation:
+      strategy: rollback
       retries: 3
   values:
     metricsScraper:
@@ -31,7 +35,12 @@ spec:
         - --disable-settings-authorizer
         - --enable-insecure-login
         - --token-ttl=86400 # seconds time to expire
-
+      resources:
+        requests:
+          cpu: 100m
+          memory: 100Mi
+        limits:
+          memory: 2Gi
     service:
       app:
         controller: *app
